<resources>
    <string name="app_name">Cryptonite</string> <!-- "Top Cents" also a dope name, or "STONKS" xd -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="rank">#</string>
    <string name="COIN">coin</string>
    <string name="PRICE">PRICE</string>
    <string name="price">price</string>
    <string name="percentage">24H</string>
    <string name="market_cap">market cap</string>
    <string name="enter_your_email_address">Enter Your Email address</string>
    <string name="enter_your_password">Enter Your password</string>
    <string name="sign_in">Sign IN</string>
    <string name="sign_up">Sign UP</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet ? Sign Up</string>
    <string name="have_an_account">Have an account? Sign In</string>
    <string name="sign_out">Sign out</string>
    <string name="change_to_dark_mode">Change to Dark Mode</string>
    <string name="price_usd">price (USD)</string>
    <string name="change_it">CHANGE IT</string>
    <string name="target_currency">Target currency:</string>
    <string name="button">Button</string>
    <string name="charts">CHARTS</string>
    <string name="search">search</string>
    <string name="enter_ticker_btc">enter ticker (btc..)</string>
    <string name="time_period">Time period</string>
    <string name="back">Back</string>
    <string name="price_usd1">price (USD)</string>
    <string name="time_period_1h">Time period (1H)</string>

    <string-array name="currency_string_array">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>JPY</item>
    </string-array>

</resources>
