<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Market.MarketFragment">

    <TextView
        android:id="@+id/infoBar"
        android:layout_width="411dp"
        android:layout_height="38dp"
        android:background="#033C37"
        app:layout_constraintBottom_toTopOf="@+id/recycleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="8dp"
        android:text="@string/rank"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/infoBar"
        app:layout_constraintEnd_toEndOf="@+id/infoBar"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/infoBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="8dp"
        android:text="@string/COIN"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/infoBar"
        app:layout_constraintEnd_toEndOf="@+id/infoBar"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/infoBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="8dp"
        android:text="@string/price"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/infoBar"
        app:layout_constraintEnd_toEndOf="@+id/infoBar"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/infoBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="8dp"
        android:text="@string/percentage"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/infoBar"
        app:layout_constraintEnd_toEndOf="@+id/infoBar"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/infoBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="8dp"
        android:text="@string/market_cap"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/infoBar"
        app:layout_constraintEnd_toEndOf="@+id/infoBar"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/infoBar"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="694dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>