<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UI.Market.LineChartFragment"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="">


        <Button
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="50dp"
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_baseline_arrow_back"
            android:drawableTint="@color/teal_700"


            />

        <EditText
            android:gravity="center"
            android:id="@+id/ticker_field"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/enter_ticker_btc"
            android:inputType="textAutoComplete"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:ignore="TextFields"
            />

        <Button
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/searchButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_baseline_search"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:gravity="start"
        android:text="@string/price_usd1"
        android:textColor="@color/black"
        tools:ignore="RtlSymmetry" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/cryptoGraph"
        android:layout_width="match_parent"
        android:layout_height="483dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/time_period_1h"
        android:textColor="@color/black"
        android:paddingStart="30dp"
        tools:ignore="RtlSymmetry" />


</LinearLayout>